# luisalabs-dio-api-bancaria-com-fastAPI

./: README.md  alembic.ini  bank.db  pyproject.toml
alembic/: env.py
alembic/versions/: 2571fb117954_create_clientes_contas_transacoes.py  3757043d88f9_create_cliente_table.py  5a10cf8dc10f_revisão_de_tipagem_na_coluna_saldo_da_.py  80204a490a78_initial_migration.py  e4364801e3ae_coreções.py
app/: database.py  main.py  security.py
app/models/: __init__.py  cliente.py  conta.py  transacao.py
app/routes/: auth.py  cliente.py  conta.py  transacao.py
app/schemas/: __init__.py  auth.py  cliente.py  conta.py  transacao.py
app/services/: auth_service.py  cliente_service.py  conta_service.py  transacao_service.py  utils.py
